# f1_olap

./: .gitattributes  .gitignore  README.md  app.py  combine_databases.py  corner_speed.py  db.py  load.py  olap.py  olap.sql  pyproject.toml  requirements.txt  schema.sql  team_rank.py
.github/workflows/: sync-to-hub.yml
app/: cubes.py  dashboard.py  db_manager.py
assets/models/: rfc_classifier.pkl
notebooks/: eda.ipynb
scripts/: combine.py  db.py  load.py  sanity.py
sql/: schema.sql
